# MIT-6.837-computer-graphics

./: .gitignore
Assignments/Assignment 0/: main.cpp  zero.vcxproj
Assignments/Assignment 0/vecmath/: Vector3f.cpp
Assignments/Assignment 1/: CMakeLists.txt  curve.cpp  main.cpp  surf.cpp
